fixed name wrapping issue

--- a/src/Pages/Download/styles.css
+++ b/src/Pages/Download/styles.css
@@ -91,7 +91,7 @@
  
   .download-user-details {
     display: inline-block;
-    width: 200px;
+    width: 300px;
     position: absolute;
     top: 5%;
     left: 7%;
